Add Filter #1 modal (Filters)

--- a/assets/css/pages/explore.css
+++ b/assets/css/pages/explore.css
@@ -23189,3 +23189,59 @@ select[disabled] {
   background: var(--f-k-smk-x) !important;
   color: var(--f-mkcy-f) !important;
 }
+
+/* Filter #1 Modal */
+@media (min-width: 744px) and (min-height: 475px) {
+  ._virdaj {
+    -webkit-box-align: center !important;
+    padding: 40px !important;
+    align-items: center !important;
+  }
+}
+
+._upim4d, ._1t0jy5tw {
+  display: none !important;
+}
+
+@media (min-width: 744px) {
+  ._upim4d {
+    display: contents !important;
+  }
+
+  ._1t0jy5tw {
+    display: flex !Important;
+  }
+}
+
+._smt4n2a {
+  position: absolute !important;
+  opacity: 0 !important;
+}
+
+._1v5cvwv4 {
+  display: inline-block !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  height: 24px !important;
+  width: 24px !important;
+  text-align: center !important;
+  overflow: hidden !important;
+  vertical-align: top !important;
+  border-radius: 4px !important;
+  background: rgb(34, 34, 34) !important;
+  color: rgb(255, 255, 255) !important;
+  border-color: rgb(34, 34, 34) !important;
+}
+
+._1oj8hra {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  display: block !important;
+  align-items: center !important;
+  justify-content: center !important;
+  width: 100% !important;
+  height: 100% !important;
+  margin-top: 2px !important;
+  margin-left: 3px !important;
+  color: rgb(255, 255, 255) !important;
+}
