Add Filter #4 menu and modal (free cancellation, type of place, price, instant book, more filters)

--- a/assets/css/pages/explore.css
+++ b/assets/css/pages/explore.css
@@ -23591,3 +23591,10 @@ select[disabled] {
   margin-right: 56px !important;
   color: rgb(113, 113, 113) !important;
 }
+
+/* Free cancellation Menu */
+
+._1vmcy00 {
+  min-width: 50px !important;
+  margin-left: 12px !important;
+}
