Rotate arrow on filter click

--- a/assets/css/pages/explore.css
+++ b/assets/css/pages/explore.css
@@ -23081,6 +23081,10 @@ select[disabled] {
   display: inline-block !important;
 }
 
+._7yfwnp:focus-within ._1xw9br6j > svg {
+  rotate: 180deg;
+}
+
 ._15kke0s {
   max-width: 848px !important;
   overflow: auto !important;
