--- a/assets/css/pages/products.css
+++ b/assets/css/pages/products.css
@@ -5975,7 +5975,7 @@ h6:first-child {
   transform: translateY(-50%) !important;
   z-index: 1 !important;
 }
-._1d3iagv {
+.btn-nav {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   appearance: none !important;
@@ -5999,7 +5999,7 @@ h6:first-child {
   height: 32px !important;
 }
 @media (hover: hover) {
-  ._1d3iagv:hover {
+  .btn-nav:hover {
     border-color: rgba(0, 0, 0, 0.08) !important;
     background-color: #fff !important;
     color: #000 !important;
