--- a/assets/css/pages/wishlist.css
+++ b/assets/css/pages/wishlist.css
@@ -1096,7 +1096,7 @@
   --save-button_height: calc(24px + var(--fgg-f-l-a));
   --save-button_width: calc(24px + var(--fgg-f-l-a));
 }
-.bq05a0m[class][class] {
+.btn-wishlist[class][class] {
   display: inline-block;
   position: relative;
   -webkit-text-decoration: none;
@@ -1107,7 +1107,7 @@
   font-family: inherit;
   touch-action: manipulation;
 }
-.dir.bq05a0m[class][class] {
+.dir.btn-wishlist[class][class] {
   cursor: pointer;
   margin: 0;
   text-align: center;
@@ -1120,10 +1120,10 @@
   padding-right: 8px;
   background: #d3d3d3;
 }
-.bq05a0m[class][class]:disabled {
+.btn-wishlist[class][class]:disabled {
   opacity: 0.3;
 }
-.dir.bq05a0m[class][class]:disabled {
+.dir.btn-wishlist[class][class]:disabled {
   cursor: not-allowed;
 }
 .vq7srz5[class][class] {
@@ -4662,7 +4662,7 @@
     background: var(--color-clear, transparent) !important;
   }
 }
-._1d3iagv {
+.btn-nav {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   appearance: none !important;
@@ -4686,7 +4686,7 @@
   height: 32px !important;
 }
 @media (hover: hover) {
-  ._1d3iagv:hover {
+  .btn-nav:hover {
     border-color: rgba(0, 0, 0, 0.08) !important;
     background-color: #fff !important;
     color: #000 !important;
