--- a/assets/css/pages/become-a-host/photos.css
+++ b/assets/css/pages/become-a-host/photos.css
@@ -3408,7 +3408,7 @@
   padding-left: 8px!important;
   opacity: .8!important
 }
-._1d3iagv {
+.btn-nav {
   -webkit-box-pack: center!important;
   -webkit-box-align: center!important;
   appearance: none!important;
