--- a/assets/css/pages/dashboard.css
+++ b/assets/css/pages/dashboard.css
@@ -833,7 +833,7 @@ body {
   font-size: 14px !important;
   line-height: 18px !important;
 }
-._1d3iagv {
+.btn-nav {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   appearance: none !important;
