--- a/assets/css/pages/places.css
+++ b/assets/css/pages/places.css
@@ -1538,7 +1538,7 @@
   height: 100% !important;
   width: 100% !important;
 }
-._1d3iagv {
+.btn-nav {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   -webkit-box-align: center !important;
@@ -1574,7 +1574,7 @@
   width: 32px !important;
   height: 32px !important;
 }
-._1d3iagv:focus-visible {
+.btn-nav:focus-visible {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
@@ -1587,25 +1587,25 @@
   -ms-transform: scale(1.04) !important;
   transform: scale(1.04) !important;
 }
-._1d3iagv:focus-visible::-moz-focus-inner {
+.btn-nav:focus-visible::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1d3iagv:focus-visible:focus::-moz-focus-inner {
+.btn-nav:focus-visible:focus::-moz-focus-inner {
   border: none !important;
 }
-._1d3iagv:focus-visible:-moz-focusring {
+.btn-nav:focus-visible:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1d3iagv:focus-visible {
+  .btn-nav:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._1d3iagv:focus[data-focus-visible-added] {
+.btn-nav:focus[data-focus-visible-added] {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
@@ -1618,25 +1618,25 @@
   -ms-transform: scale(1.04) !important;
   transform: scale(1.04) !important;
 }
-._1d3iagv:focus[data-focus-visible-added]::-moz-focus-inner {
+.btn-nav:focus[data-focus-visible-added]::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1d3iagv:focus[data-focus-visible-added]:focus::-moz-focus-inner {
+.btn-nav:focus[data-focus-visible-added]:focus::-moz-focus-inner {
   border: none !important;
 }
-._1d3iagv:focus[data-focus-visible-added]:-moz-focusring {
+.btn-nav:focus[data-focus-visible-added]:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1d3iagv:focus[data-focus-visible-added] {
+  .btn-nav:focus[data-focus-visible-added] {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._1d3iagv:disabled {
+.btn-nav:disabled {
   opacity: 0.5 !important;
   cursor: not-allowed !important;
   color: #ddd !important;
@@ -1648,25 +1648,25 @@
   transform: scale(1) !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1d3iagv {
+  .btn-nav {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._1d3iagv::-moz-focus-inner {
+.btn-nav::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1d3iagv:focus::-moz-focus-inner {
+.btn-nav:focus::-moz-focus-inner {
   border: none !important;
 }
-._1d3iagv:-moz-focusring {
+.btn-nav:-moz-focusring {
   outline: 0 !important;
 }
 @media (hover: hover) {
-  ._1d3iagv:hover {
+  .btn-nav:hover {
     border-color: rgba(0, 0, 0, 0.08) !important;
     background-color: #fff !important;
     color: #000 !important;
@@ -1677,7 +1677,7 @@
     transform: scale(1.04) !important;
   }
 }
-._1d3iagv:active {
+.btn-nav:active {
   border-color: rgba(0, 0, 0, 0.08) !important;
   background-color: #fff !important;
   color: #000 !important;
@@ -7180,7 +7180,7 @@
   width: 1px !important;
 }
 @media (hover: hover) {
-  ._1d3iagv:hover {
+  .btn-nav:hover {
     border-color: rgba(0, 0, 0, 0.08) !important;
     background-color: #fff !important;
     color: #000 !important;
@@ -7191,7 +7191,7 @@
     transform: scale(1.04) !important;
   }
 }
-._1d3iagv {
+.btn-nav {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   -webkit-box-align: center !important;
