--- a/assets/css/pages/submission/photo.css
+++ b/assets/css/pages/submission/photo.css
@@ -3186,7 +3186,7 @@ a:hover {
   padding-left: 8px!important;
   opacity: .8!important
 }
-._1d3iagv {
+.btn-nav {
   -webkit-box-pack: center!important;
   -webkit-box-align: center!important;
   appearance: none!important;
