--- a/assets/css/pages/explore.css
+++ b/assets/css/pages/explore.css
@@ -21041,7 +21041,7 @@ h3:first-child {
     overflow: clip !important;
   }
 }
-._1b2klj3 {
+.pagination-bullet-wrapper {
   -webkit-box-pack: center !important;
   -webkit-box-align: end !important;
   align-items: flex-end !important;
@@ -21054,7 +21054,7 @@ h3:first-child {
     -webkit-transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),
     transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
 }
-._4o74ccl {
+.pagination-bullet--active {
   background: #fff !important;
   border-radius: 50% !important;
   height: 6px !important;
@@ -21065,7 +21065,7 @@ h3:first-child {
   width: 6px !important;
   opacity: 1 !important;
 }
-._1k9ksvh {
+.pagination-bullet {
   background: #fff !important;
   border-radius: 50% !important;
   height: 6px !important;
