--- a/assets/css/pages/places.css
+++ b/assets/css/pages/places.css
@@ -7131,7 +7131,7 @@
   padding-bottom: 12px !important;
   max-width: 55px !important;
 }
-._1b2klj3 {
+.pagination-bullet-wrapper {
   -webkit-box-pack: center !important;
   -webkit-box-align: end !important;
   align-items: flex-end !important;
@@ -7144,7 +7144,7 @@
     -webkit-transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),
     transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
 }
-._4o74ccl {
+.pagination-bullet--active {
   background: #fff !important;
   border-radius: 50% !important;
   height: 6px !important;
@@ -7155,7 +7155,7 @@
   width: 6px !important;
   opacity: 1 !important;
 }
-._1k9ksvh {
+.pagination-bullet {
   background: #fff !important;
   border-radius: 50% !important;
   height: 6px !important;
