--- a/assets/css/pages/wishlist.css
+++ b/assets/css/pages/wishlist.css
@@ -4608,7 +4608,7 @@
     overflow: clip !important;
   }
 }
-._1b2klj3 {
+.pagination-bullet-wrapper {
   -webkit-box-pack: center !important;
   -webkit-box-align: end !important;
   align-items: flex-end !important;
@@ -4621,7 +4621,7 @@
     -webkit-transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),
     transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
 }
-._4o74ccl {
+.pagination-bullet--active {
   background: #fff !important;
   border-radius: 50% !important;
   height: 6px !important;
@@ -4632,7 +4632,7 @@
   width: 6px !important;
   opacity: 1 !important;
 }
-._1k9ksvh {
+.pagination-bullet {
   background: #fff !important;
   border-radius: 50% !important;
   height: 6px !important;
