rename form__check-input--checked, form__input

--- a/assets/css/pages/explore.css
+++ b/assets/css/pages/explore.css
@@ -15226,7 +15226,7 @@ select[disabled] {
     display: flex !important;
   }
 }
-._smt4n2a {
+.form__check-input--checked {
   position: absolute !important;
   opacity: 0 !important;
 }
