--- a/assets/css/pages/resolutions_2.css
+++ b/assets/css/pages/resolutions_2.css
@@ -1092,7 +1092,7 @@ body {
   opacity: 1!important
 }
 ._c5rhl5,
-._yrzsibu {
+.form__input {
   width: 100%!important;
   border: none!important;
   outline: 0!important;
