--- a/assets/css/pages/signup_login.css
+++ b/assets/css/pages/signup_login.css
@@ -3604,7 +3604,7 @@
   transform: translateY(-8px) scale(0.75) !important;
   font-weight: 400 !important;
 }
-._yrzsibu {
+.form__input {
   width: 100% !important;
   border: none !important;
   outline: 0 !important;
@@ -3708,7 +3708,7 @@
   overflow: hidden !important;
   vertical-align: top !important;
 }
-._smt4n2a {
+.form__check-input--checked {
   position: absolute !important;
   opacity: 0 !important;
 }
