--- a/assets/css/pages/submission/booking.css
+++ b/assets/css/pages/submission/booking.css
@@ -3792,7 +3792,7 @@ body {
   padding-left: 12px!important;
   margin-right: -6px!important
 }
-._yrzsibu {
+.form__input {
   width: 100%!important;
   border: none!important;
   outline: 0!important;
