--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -22510,7 +22510,7 @@ h6:first-child {
   padding-left: 12px !important;
   margin-right: -6px !important;
 }
-._yrzsibu {
+.form__input {
   width: 100% !important;
   border: none !important;
   outline: 0 !important;
