--- a/assets/css/pages/become-a-host/legal.css
+++ b/assets/css/pages/become-a-host/legal.css
@@ -1310,11 +1310,11 @@
   cursor: pointer!important;
   padding: 0!important
 }
-._smt4n2a {
+.form__check-input--checked {
   position: absolute!important;
   opacity: 0!important
 }
-._smt4n2a:focus-visible + [data-checkbox] {
+.form__check-input--checked:focus-visible + [data-checkbox] {
   -webkit-transition: box-shadow .2s!important;
   -moz-transition: box-shadow .2s!important;
   transition: box-shadow .2s!important;
@@ -1322,13 +1322,13 @@
   border-color: #222!important
 }
 @media (prefers-reduced-motion:reduce) {
-  ._smt4n2a:focus-visible + [data-checkbox] {
+  .form__check-input--checked:focus-visible + [data-checkbox] {
     -webkit-transition: none!important;
     -moz-transition: none!important;
     transition: none!important
   }
 }
-._smt4n2a:focus[data-focus-visible-added] + [data-checkbox] {
+.form__check-input--checked:focus[data-focus-visible-added] + [data-checkbox] {
   -webkit-transition: box-shadow .2s!important;
   -moz-transition: box-shadow .2s!important;
   transition: box-shadow .2s!important;
@@ -1336,20 +1336,20 @@
   border-color: #222!important
 }
 @media (prefers-reduced-motion:reduce) {
-  ._smt4n2a:focus[data-focus-visible-added] + [data-checkbox] {
+  .form__check-input--checked:focus[data-focus-visible-added] + [data-checkbox] {
     -webkit-transition: none!important;
     -moz-transition: none!important;
     transition: none!important
   }
 }
-._smt4n2a:hover + [data-checkbox] {
+.form__check-input--checked:hover + [data-checkbox] {
   border-color: #000!important;
   background: #000!important
 }
-._smt4n2a:focus + [data-checkbox] {
+.form__check-input--checked:focus + [data-checkbox] {
   z-index: 1!important
 }
-._smt4n2a:disabled + [data-checkbox] {
+.form__check-input--checked:disabled + [data-checkbox] {
   cursor: not-allowed!important;
   background: #ddd!important;
   color: #fff!important;
