--- a/assets/css/pages/edit/GuestReq.css
+++ b/assets/css/pages/edit/GuestReq.css
@@ -3211,7 +3211,7 @@ a:hover {
   display: flex!important;
   opacity: 1!important
 }
-._yrzsibu {
+.form__input {
   width: 100%!important;
   border: none!important;
   outline: 0!important;
