--- a/assets/css/pages/personal-info.css
+++ b/assets/css/pages/personal-info.css
@@ -3080,7 +3080,7 @@
   display: flex !important;
   opacity: 1 !important;
 }
-._yrzsibu {
+.form__input {
   width: 100% !important;
   border: none !important;
   outline: 0 !important;
