--- a/assets/css/pages/submission/bring.css
+++ b/assets/css/pages/submission/bring.css
@@ -3136,7 +3136,7 @@ a:hover {
   display: flex!important;
   opacity: 1!important
 }
-._yrzsibu {
+.form__input {
   width: 100%!important;
   border: none!important;
   outline: 0!important;
