rename  btn-dark--small

--- a/assets/css/pages/dashboard.css
+++ b/assets/css/pages/dashboard.css
@@ -1032,7 +1032,7 @@ body {
     margin-bottom: 48px !important;
   }
 }
-._1lerwp6l {
+.btn-dark--small {
   cursor: pointer !important;
   display: inline-block !important;
   margin: 0 !important;
