--- a/assets/css/pages/explore.css
+++ b/assets/css/pages/explore.css
@@ -15184,7 +15184,7 @@ select[disabled] {
 ._ls0e43 {
   margin-left: auto !important;
 }
-._1lerwp6l {
+.btn-dark--small {
   cursor: pointer !important;
   display: inline-block !important;
   margin: 0 !important;
