--- a/assets/css/pages/submission/theme.css
+++ b/assets/css/pages/submission/theme.css
@@ -2488,14 +2488,14 @@ body {
   font-size: 12px!important;
   color: #767676!important
 }
-._1lerwp6l:disabled {
+.btn-dark--small:disabled {
   cursor: not-allowed!important;
   opacity: 1!important;
   border: none!important;
   background: var(--j-qkgmf)!important;
   color: var(--f-mkcy-f)!important
 }
-._1lerwp6l {
+.btn-dark--small {
   cursor: pointer!important;
   display: inline-block!important;
   margin: 0!important;
