rename header (header with anywhere)

--- a/assets/css/pages/explore.css
+++ b/assets/css/pages/explore.css
@@ -10963,57 +10963,57 @@ select[disabled] {
   }
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c1kffd0v[class][class]::before {
+  .dir.header[class][class]::before {
     transition: none;
   }
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c1kffd0v[class][class]::after {
+  .dir.header[class][class]::after {
     transition: none;
   }
 }
 @supports (--a: a) {
-  .cgf6h58[class][class] {
+  .header__container[class][class] {
     max-width: var(--page-shell-max-content-width, 1440px);
   }
 }
 @media (min-width: 375px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--ic-zlb-s);
     padding-right: var(--ic-zlb-s);
   }
 }
 @media (min-width: 744px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--f-fw-z-a-i);
     padding-right: var(--f-fw-z-a-i);
   }
 }
 @media (min-width: 950px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--f-fw-z-a-i);
     padding-right: var(--f-fw-z-a-i);
   }
 }
 @media (min-width: 1128px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--cy-o-aco);
     padding-right: var(--cy-o-aco);
   }
 }
 @media (min-width: 1440px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--cy-o-aco);
     padding-right: var(--cy-o-aco);
   }
 }
 @media (min-width: 950px) {
-  .c1xsvlgx[class][class] {
+  .header__brand-wrapper[class][class] {
     flex: 1 0 140px;
   }
 }
 @media (min-width: 950px) {
-  .cylj8v3[class][class] {
+  .header__nav-wrapper[class][class] {
     flex: 1 0 140px;
   }
 }
@@ -11023,7 +11023,7 @@ select[disabled] {
   }
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c13cw3wj[class][class]:focus-visible::before {
+  .dir.header__brand[class][class]:focus-visible::before {
     transition: none;
   }
 }
@@ -11901,7 +11901,7 @@ select[disabled] {
   }
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c13cw3wj[class][class]:focus-visible::before {
+  .dir.header__brand[class][class]:focus-visible::before {
     transition: none;
   }
 }
@@ -13674,7 +13674,7 @@ select[disabled] {
   }
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c13cw3wj[class][class]:focus-visible::before {
+  .dir.header__brand[class][class]:focus-visible::before {
     transition: none;
   }
 }
@@ -13944,57 +13944,57 @@ select[disabled] {
   margin-right: 40px;
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c1kffd0v[class][class]::before {
+  .dir.header[class][class]::before {
     transition: none;
   }
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c1kffd0v[class][class]::after {
+  .dir.header[class][class]::after {
     transition: none;
   }
 }
 @supports (--a: a) {
-  .cgf6h58[class][class] {
+  .header__container[class][class] {
     max-width: var(--page-shell-max-content-width, 1440px);
   }
 }
 @media (min-width: 375px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--ic-zlb-s);
     padding-right: var(--ic-zlb-s);
   }
 }
 @media (min-width: 744px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--f-fw-z-a-i);
     padding-right: var(--f-fw-z-a-i);
   }
 }
 @media (min-width: 950px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--f-fw-z-a-i);
     padding-right: var(--f-fw-z-a-i);
   }
 }
 @media (min-width: 1128px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--cy-o-aco);
     padding-right: var(--cy-o-aco);
   }
 }
 @media (min-width: 1440px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--cy-o-aco);
     padding-right: var(--cy-o-aco);
   }
 }
 @media (min-width: 950px) {
-  .c1xsvlgx[class][class] {
+  .header__brand-wrapper[class][class] {
     flex: 1 0 140px;
   }
 }
 @media (min-width: 950px) {
-  .cylj8v3[class][class] {
+  .header__nav-wrapper[class][class] {
     flex: 1 0 140px;
   }
 }
@@ -14004,17 +14004,17 @@ select[disabled] {
   }
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c13cw3wj[class][class]:focus-visible::before {
+  .dir.header__brand[class][class]:focus-visible::before {
     transition: none;
   }
 }
 @media (min-width: 1128px) {
-  .l10sdlqs[class][class] {
+  .header__logo-lg[class][class] {
     display: block;
   }
 }
 @media (min-width: 1128px) {
-  .bpe4snb[class][class] {
+  .header__logo[class][class] {
     display: none;
   }
 }
@@ -15020,7 +15020,7 @@ select[disabled] {
   }
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c13cw3wj[class][class]:focus-visible::before {
+  .dir.header__brand[class][class]:focus-visible::before {
     transition: none;
   }
 }
@@ -15337,7 +15337,7 @@ select[disabled] {
     display: contents !important;
   }
 }
-._vuzcgs {
+.header__nav {
   -webkit-box-pack: end !important;
   -ms-flex-pack: end !important;
   -webkit-box-align: center !important;
@@ -15554,12 +15554,12 @@ select[disabled] {
   }
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c1kffd0v[class][class]::before {
+  .dir.header[class][class]::before {
     transition: none;
   }
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c1kffd0v[class][class]::after {
+  .dir.header[class][class]::after {
     transition: none;
   }
 }
@@ -15574,47 +15574,47 @@ select[disabled] {
   }
 }
 @supports (--a: a) {
-  .cgf6h58[class][class] {
+  .header__container[class][class] {
     max-width: var(--page-shell-max-content-width, 1440px);
   }
 }
 @media (min-width: 375px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--ic-zlb-s);
     padding-right: var(--ic-zlb-s);
   }
 }
 @media (min-width: 744px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--f-fw-z-a-i);
     padding-right: var(--f-fw-z-a-i);
   }
 }
 @media (min-width: 950px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--f-fw-z-a-i);
     padding-right: var(--f-fw-z-a-i);
   }
 }
 @media (min-width: 1128px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--cy-o-aco);
     padding-right: var(--cy-o-aco);
   }
 }
 @media (min-width: 1440px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--cy-o-aco);
     padding-right: var(--cy-o-aco);
   }
 }
 @media (min-width: 950px) {
-  .c1xsvlgx[class][class] {
+  .header__brand-wrapper[class][class] {
     flex: 1 0 140px;
   }
 }
 @media (min-width: 950px) {
-  .cylj8v3[class][class] {
+  .header__nav-wrapper[class][class] {
     flex: 1 0 140px;
   }
 }
@@ -15632,17 +15632,17 @@ select[disabled] {
   }
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c13cw3wj[class][class]:focus-visible::before {
+  .dir.header__brand[class][class]:focus-visible::before {
     transition: none;
   }
 }
 @media (min-width: 1128px) {
-  .l10sdlqs[class][class] {
+  .header__logo-lg[class][class] {
     display: block;
   }
 }
 @media (min-width: 1128px) {
-  .bpe4snb[class][class] {
+  .header__logo[class][class] {
     display: none;
   }
 }
@@ -17671,17 +17671,17 @@ h3:first-child {
 .c1kn6kxw[class][class] {
   --page-shell-max-content-width: 1760px;
 }
-.c1kffd0v[class][class] {
+.header[class][class] {
   height: 80px;
   width: 100%;
   z-index: 100;
   --header_brand-color: var(--ihf-tp-q);
   position: relative;
 }
-.dir-ltr.c1kffd0v[class][class] {
+.dir-ltr.header[class][class] {
   left: 0;
 }
-.c1kffd0v[class][class]::before {
+.header[class][class]::before {
   content: '';
   height: 140%;
   opacity: 0;
@@ -17691,19 +17691,19 @@ h3:first-child {
   width: 100%;
   z-index: 0;
 }
-.dir.c1kffd0v[class][class]::before {
+.dir.header[class][class]::before {
   background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0));
   transition: opacity 150ms;
 }
-.dir-ltr.c1kffd0v[class][class]::before {
+.dir-ltr.header[class][class]::before {
   left: 0;
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c1kffd0v[class][class]::before {
+  .dir.header[class][class]::before {
     transition: none;
   }
 }
-.c1kffd0v[class][class]::after {
+.header[class][class]::after {
   content: '';
   height: 100%;
   opacity: 0;
@@ -17712,21 +17712,21 @@ h3:first-child {
   width: 100%;
   z-index: 0;
 }
-.dir.c1kffd0v[class][class]::after {
+.dir.header[class][class]::after {
   box-shadow: rgba(0, 0, 0, 0.08) 0 1px 12px;
   transform-origin: 50% 0;
   transition: transform 150ms, opacity 150ms 75ms;
   background: var(--f-mkcy-f);
 }
-.dir-ltr.c1kffd0v[class][class]::after {
+.dir-ltr.header[class][class]::after {
   left: 0;
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c1kffd0v[class][class]::after {
+  .dir.header[class][class]::after {
     transition: none;
   }
 }
-.dir.c1kffd0v[class][class]::after {
+.dir.header[class][class]::after {
   box-shadow: rgb(0 0 0 / 8%) 0 1px 0;
 }
 .cxy853f[class][class]::after {
@@ -17770,62 +17770,62 @@ h3:first-child {
   width: 100%;
   z-index: 1;
 }
-.cgf6h58[class][class] {
+.header__container[class][class] {
   max-width: 1440px;
 }
-.dir.cgf6h58[class][class] {
+.dir.header__container[class][class] {
   padding-left: var(--ic-zlb-s);
   padding-right: var(--ic-zlb-s);
   margin: 0 auto;
 }
 @supports (--a: a) {
-  .cgf6h58[class][class] {
+  .header__container[class][class] {
     max-width: var(--page-shell-max-content-width, 1440px);
   }
 }
 @media (min-width: 375px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--ic-zlb-s);
     padding-right: var(--ic-zlb-s);
   }
 }
 @media (min-width: 744px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--f-fw-z-a-i);
     padding-right: var(--f-fw-z-a-i);
   }
 }
 @media (min-width: 950px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--f-fw-z-a-i);
     padding-right: var(--f-fw-z-a-i);
   }
 }
 @media (min-width: 1128px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--cy-o-aco);
     padding-right: var(--cy-o-aco);
   }
 }
 @media (min-width: 1440px) {
-  .dir.cgf6h58[class][class] {
+  .dir.header__container[class][class] {
     padding-left: var(--cy-o-aco);
     padding-right: var(--cy-o-aco);
   }
 }
-.c1xsvlgx[class][class] {
+.header__brand-wrapper[class][class] {
   flex: 0 0 auto;
 }
 @media (min-width: 950px) {
-  .c1xsvlgx[class][class] {
+  .header__brand-wrapper[class][class] {
     flex: 1 0 140px;
   }
 }
-.cylj8v3[class][class] {
+.header__nav-wrapper[class][class] {
   flex: 1 0 auto;
 }
 @media (min-width: 950px) {
-  .cylj8v3[class][class] {
+  .header__nav-wrapper[class][class] {
     flex: 1 0 140px;
   }
 }
@@ -17862,7 +17862,7 @@ h3:first-child {
     opacity: 1;
   }
 }
-.c13cw3wj[class][class] {
+.header__brand[class][class] {
   outline: 0;
   align-items: center;
   display: inline-flex;
@@ -17871,53 +17871,53 @@ h3:first-child {
   vertical-align: middle;
   z-index: 1;
 }
-.dir.c13cw3wj[class][class] {
+.dir.header__brand[class][class] {
   transition: color 250ms;
 }
-.dir.c13cw3wj[class][class]::-moz-focus-inner {
+.dir.header__brand[class][class]::-moz-focus-inner {
   border: none;
   padding: 0;
   margin: 0;
 }
-.dir.c13cw3wj[class][class]:focus::-moz-focus-inner {
+.dir.header__brand[class][class]:focus::-moz-focus-inner {
   border: none;
 }
-.c13cw3wj[class][class]:-moz-focusring {
+.header__brand[class][class]:-moz-focusring {
   outline: 0;
 }
-.c13cw3wj[class][class]::before {
+.header__brand[class][class]::before {
   bottom: 8px;
   content: '';
   position: absolute;
   top: 8px;
 }
-.dir.c13cw3wj[class][class]::before {
+.dir.header__brand[class][class]::before {
   border-radius: var(--i-g-gvoq);
   left: -8px;
   right: -8px;
 }
-.dir.c13cw3wj[class][class]:focus-visible::before {
+.dir.header__brand[class][class]:focus-visible::before {
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px var(--f-mkcy-f);
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c13cw3wj[class][class]:focus-visible::before {
+  .dir.header__brand[class][class]:focus-visible::before {
     transition: none;
   }
 }
 .cbavvlr[class][class] {
   color: var(--ihf-tp-q);
 }
-.l10sdlqs[class][class] {
+.header__logo-lg[class][class] {
   display: none;
 }
 @media (min-width: 1128px) {
-  .l10sdlqs[class][class] {
+  .header__logo-lg[class][class] {
     display: block;
   }
 }
 @media (min-width: 1128px) {
-  .bpe4snb[class][class] {
+  .header__logo[class][class] {
     display: none;
   }
 }
