--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -23801,13 +23801,13 @@ h6:first-child {
 
 @supports (--a:a) {}
 
-.dir.c13cw3wj[class][class]:focus-visible::before {
+.dir.header__brand[class][class]:focus-visible::before {
   transition: box-shadow 0.2s ease;
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px var(--f-mkcy-f);
 }
 
 @media (prefers-reduced-motion:reduce) {
-  .dir.c13cw3wj[class][class]:focus-visible::before {
+  .dir.header__brand[class][class]:focus-visible::before {
     transition: none;
   }
 }
