--- a/assets/css/pages/profile.css
+++ b/assets/css/pages/profile.css
@@ -4220,7 +4220,7 @@ h6:first-child {
 .dir-rtl.fp36fst[class][class] {
   margin-right: 12px;
 }
-.c13cw3wj[class][class] {
+.header__brand[class][class] {
   outline: 0;
   -webkit-align-items: center;
   -webkit-box-align: center;
@@ -4235,50 +4235,50 @@ h6:first-child {
   vertical-align: middle;
   z-index: 1;
 }
-.dir.c13cw3wj[class][class] {
+.dir.header__brand[class][class] {
   -webkit-transition: color 250ms;
   transition: color 250ms;
 }
-.dir.c13cw3wj[class][class]::-moz-focus-inner {
+.dir.header__brand[class][class]::-moz-focus-inner {
   border: none;
   padding: 0;
   margin: 0;
 }
-.dir.c13cw3wj[class][class]:focus::-moz-focus-inner {
+.dir.header__brand[class][class]:focus::-moz-focus-inner {
   border: none;
 }
-.c13cw3wj[class][class]:-moz-focusring {
+.header__brand[class][class]:-moz-focusring {
   outline: 0;
 }
-.c13cw3wj[class][class]::before {
+.header__brand[class][class]::before {
   bottom: 8px;
   content: '';
   position: absolute;
   top: 8px;
 }
-.dir.c13cw3wj[class][class]::before {
+.dir.header__brand[class][class]::before {
   border-radius: var(--i-g-gvoq);
   left: -8px;
   right: -8px;
 }
-.dir.c13cw3wj[class][class]:focus-visible::before {
+.dir.header__brand[class][class]:focus-visible::before {
   -webkit-transition: box-shadow 0.2s;
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px var(--f-mkcy-f);
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c13cw3wj[class][class]:focus-visible::before {
+  .dir.header__brand[class][class]:focus-visible::before {
     -webkit-transition: none;
     transition: none;
   }
 }
-.dir.c13cw3wj[class][class]:focus[data-focus-visible-added]::before {
+.dir.header__brand[class][class]:focus[data-focus-visible-added]::before {
   -webkit-transition: box-shadow 0.2s;
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px var(--f-mkcy-f);
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c13cw3wj[class][class]:focus[data-focus-visible-added]::before {
+  .dir.header__brand[class][class]:focus[data-focus-visible-added]::before {
     -webkit-transition: none;
     transition: none;
   }
@@ -4286,16 +4286,16 @@ h6:first-child {
 .cbavvlr[class][class] {
   color: var(--ihf-tp-q);
 }
-.l10sdlqs[class][class] {
+.header__logo-lg[class][class] {
   display: none;
 }
 @media (min-width: 1128px) {
-  .l10sdlqs[class][class] {
+  .header__logo-lg[class][class] {
     display: block;
   }
 }
 @media (min-width: 1128px) {
-  .bpe4snb[class][class] {
+  .header__logo[class][class] {
     display: none;
   }
 }
